solved restart button and overflow in answer option

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,7 +396,7 @@ p{
     color: #ffffff;
     font-size: 20px;
     text-align: center;
-    width: 10%;
+    width: 35%;
     height: 5vh;
     margin: 2% 0 2% 0;
     border: none;
@@ -414,7 +414,12 @@ p{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    word-wrap: break-word;
     
+}
+
+option{
+    overflow: hidden;
 }
 
 @media (max-width: 1100px){
@@ -466,6 +471,7 @@ p{
     
     .question-quizz{
         font-size: 22px;  
+        overflow: hidden;
     } 
 }
 
